--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -93,4 +93,12 @@
             android:onClick="buttonClick" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/buttonVoltar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        android:text="Voltar" />
+
 </LinearLayout>
