--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -2,103 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".MainActivity"
-    android:background="@drawable/background2">
+    android:orientation="horizontal"
+    tools:context=".MainActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/maintext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonUm"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonDois"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick"/>
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonTres"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-    </LinearLayout>
+        android:fontFamily="serif"
+        android:text="Forca - Terror edition"
+        android:textColor="#ED0000"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonQuatro"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonCinco"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonSeis"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonSete"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonOito"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/buttonNove"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="5dp"
-            android:onClick="buttonClick" />
-    </LinearLayout>
+        android:text="I want to play a game..."
+        android:textColor="#E70000"
+        android:textSize="20sp"
+        android:gravity="bottom"
+        android:textStyle="bold"/>
 
     <Button
-        android:id="@+id/buttonVoltar"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:textColor="@color/white"
-        android:text="Voltar" />
+        android:layout_marginTop="16dp"
+        android:textColor="@color/black"
+        android:text="Modo Fácil" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/black"
+        android:text="Modo Difícil" />
 
 </LinearLayout>
