--- a/main/res/values-night/themes.xml
+++ b/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.JogoDaVelhaAlexandre1203" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.JogoDaForca" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
