--- a/main/res/values/themes.xml
+++ b/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.JogoDaVelhaAlexandre1203" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.JogoDaForca" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.JogoDaVelhaAlexandre1203" parent="Base.Theme.JogoDaVelhaAlexandre1203" />
+    <style name="Theme.JogoDaForca" parent="Base.Theme.JogoDaForca" />
 </resources>
