--- a/main/res/layout/activity_jogo.xml
+++ b/main/res/layout/activity_jogo.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".JogoActivity"
+    android:background="@drawable/fundo"
     android:padding="16dp"
     android:orientation="vertical">
 
@@ -14,13 +15,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tentativas: 8"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/textOculto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="______"
+        android:text="_ _ _ _ _ _"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:layout_marginTop="20dp"/>
 
@@ -31,13 +34,16 @@
         android:layout_marginTop="20dp"
         android:maxLength="1"
         android:inputType="text"
-        android:hint="Digite Uma Letra"/>
+        android:hint="Digite Uma Letra"
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Adivinhar"
+        android:background="#FF0000"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:id="@+id/buttonAdivinhar"/>
 
     <TextView
@@ -52,7 +58,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Voltar"
+        android:background="#FF0000"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:id="@+id/buttonVoltar"/>
 
 </LinearLayout>
