--- a/main/res/layout/activity_jogodificil.xml
+++ b/main/res/layout/activity_jogodificil.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".JogoActivity"
+    android:background="@drawable/fundodificil"
     android:padding="16dp"
     android:orientation="vertical">
 
@@ -14,13 +15,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tentativas: 5"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/textOculto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="______"
+        android:text="_ _ _ _ _ _"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:layout_marginTop="20dp"/>
 
@@ -31,6 +34,7 @@
         android:layout_marginTop="20dp"
         android:maxLength="1"
         android:inputType="text"
+        android:textColor="#ED0000"
         android:hint="Digite Uma Letra"/>
 
     <Button
@@ -38,6 +42,8 @@
         android:layout_height="wrap_content"
         android:text="Adivinhar"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:background="#FF0000"
         android:id="@+id/buttonAdivinhar"/>
 
     <TextView
@@ -49,10 +55,12 @@
         android:layout_marginTop="20dp"/>
 
     <Button
+        android:id="@+id/buttonVoltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Voltar"
         android:layout_marginTop="20dp"
-        android:id="@+id/buttonVoltar"/>
+        android:layout_gravity="center"
+        android:background="#FF0000"
+        android:text="Voltar" />
 
 </LinearLayout>
