--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -20,27 +20,18 @@
         android:textSize="50sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:text="Do you like scary movies?"
-        android:textColor="#E70000"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+       android:textColor="#ED0000"
         android:text="Modo Fácil" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:textColor="#ED0000"
         android:text="Modo Difícil" />
 
 </LinearLayout>
